Add init files for metrics and query
Add environment variables to the container.env when the container is setup in the production environment

Add a second internal web server without authentication and without SCRIPT_NAME to allow faster internal communications

Correct installation of cron activities using root user

Correct URLs to be dynamic instead of static to allow BOA to work behind a proxy

Correct parameter of method query_report_alerts_and_render (entity_uuid -> report_uuid)

Recover scheduler navigation

--- a/src/vboa/templates/boa_health/boa_health.html
+++ b/src/vboa/templates/boa_health/boa_health.html
@@ -8,7 +8,7 @@
 {% include "boa_health/boa_health_query.html" %}
 
 <!-- Pagination -->
-{% with route = "/health/health-pages", elements = health_events, filters = filters %}
+{% with route = url_for('boa_health.query_health_pages'), elements = health_events, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -239,7 +239,7 @@
               <td>{{ value }}</td>
               {% endfor %}
               <td>{{ health_events[0].start.isoformat() }}</td>
-              <td><a href="/eboa_nav/query-event-links/{{ health_events[0].event_uuid }}">{{ health_events[0].event_uuid }}</a></td>
+              <td><a href="{{ url_for('eboa_nav.query_event_links_and_render', event_uuid=health_events[0].event_uuid) }}">{{ health_events[0].event_uuid }}</a></td>
             </tr>
             {% endfor %}
           </tbody>
@@ -488,7 +488,7 @@
   "window_size": "{{ sliding_window['window_size'] }}",
   }
   var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
-  vboa.update_view(parameters, repeat_cycle, "/health/sliding_health_parameters");
+  vboa.update_view(parameters, repeat_cycle, "{{ url_for('health.show_sliding_health_parameters') }}");
   {% endif %}
 </script>
 {% endblock %}
