--- a/src/vboa/templates/ingestion_control/ingestion_control_query.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_query.html
@@ -13,7 +13,7 @@
         </ul>
         <div class="tab-content">
           <div class="tab-pane active" id="ingestion-control-query-window">          
-            <form role="form" method=post action="/ingestion_control/ingestion_control{{ template }}">
+            <form role="form" method=post action="{{ url_for('ingestion_control.show_ingestion_control') }}{{ template }}">
               <div>
                 <!-- Default values message -->
                 <div class="row">
@@ -43,7 +43,7 @@
             </form>
           </div>
           <div class="tab-pane" id="ingestion-control-sliding-window">          
-            <form role="form" method=post action="/ingestion_control/sliding_ingestion_control{{ template }}">
+            <form role="form" method=post action="{{ url_for('ingestion_control.show_sliding_ingestion_control_parameters') }}{{ template }}">
               <div>
                 <!-- Default values message -->
                 <div class="row">
