--- a/src/vboa/templates/reporting_control/reporting_control_alerts_content.html
+++ b/src/vboa/templates/reporting_control/reporting_control_alerts_content.html
@@ -39,7 +39,7 @@
             <td class="{{ severity_label }}-severity">{{ severity_label }}</td>
             <td>{{ alert.alertDefinition.group.name }}</td>
             <td>{{ alert.alertDefinition.name }}</td>
-            <td><a href="/eboa_nav/query-report/{{ alert.report_uuid }}">{{ alert.report.name }}</a></td>
+            <td><a href="{{ url_for('rboa_nav.query_report', report_uuid=alert.report_uuid) }}">{{ alert.report.name }}</a></td>
             <td>{{ alert.message }}</td>
             <td>{{ alert.validated }}</td>
             <td>{{ alert.generator }}</td>
