--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -52,7 +52,7 @@
         <div class="navbar-header">
           <div  class="navbar-brand">
             <div style="display:inline"><a href="{{ url_for('static', filename='images/boa_favicon.png') }}"><img src="{{ url_for('static', filename='images/boa_favicon_31x35.png') }}"/></a></div>
-            <div style="display:inline"><a href="/">{% block project_version %}BOA 1.0.3{% endblock %}</a></div>
+            <div style="display:inline"><a href="{{ url_for('panel.index') }}">{% block project_version %}BOA 1.0.3{% endblock %}</a></div>
             <!-- Button for showing/hiding the side panel -->
             <a href="#" id="sidbar-collapse" type="button">
               <i style="margin:10px" class="fa fa-bars"></i>
@@ -68,7 +68,7 @@
               Welcome {{ current_user.username }}<i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
-              <li><a href="/user-profile/?user={{ current_user.username }}"><i class="fa fa-user fa-fw"></i> View profile</li></a>
+              <li><a href="{{ url_for('user-profile.navigate', user=current_user.username) }}"><i class="fa fa-user fa-fw"></i> View profile</li></a>
               <li class="divider"></li>
               <li><a href="{{ url_for_security('logout') }}"><i class="fa fa-sign-out fa-fw"></i> Logout</li></a>
             </ul>
@@ -86,13 +86,13 @@
                 <a href="#"><i class="fa fa-users fa-fw"></i> Users management<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
-                    <a href="/users-management/uboa-nav"><i class="fa fa-fw fa-user"></i> UBOA navigation </a>
+                    <a href="{{ url_for('users-management.navigate') }}"><i class="fa fa-fw fa-user"></i> UBOA navigation </a>
                   </li>
                   <li>
-                    <a href="/users-management/import-users"><i class="fa fa-fw fa-download"></i> Import users</a>
+                    <a href="{{ url_for('users-management.import_users') }}"><i class="fa fa-fw fa-download"></i> Import users</a>
                   </li>
                   <li>
-                    <a href="/users-management/export-users"><i class="fa fa-fw fa-upload"></i> Export users</a>
+                    <a href="{{ url_for('users-management.export_users') }}"><i class="fa fa-fw fa-upload"></i> Export users</a>
                   </li>
                 </ul>
                 <!-- /.nav-second-level -->
@@ -118,10 +118,10 @@
                 <a href="#"><i class="fa fa-heart-o fa-fw"></i> BOA Health<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
-                    <a href="/health/health"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
+                    <a href="{{ url_for('health.show_health') }}"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
                   </li>
                   <li>
-                    <a href="/health/health?template=alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
+                    <a href="{{ url_for('health.show_health', template='alerts') }}"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
                   </li>
                 </ul>
                 <!-- /.nav-second-level -->
@@ -132,11 +132,11 @@
                 <a href="#"><i class="fa fa-clock-o fa-fw"></i> BOA Scheduler<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
-                    <a href="/sboa/simulate"><i class="fa fa-fw fa-calculator"></i> Simulate</a>
+                    <a href="{{ url_for('sboa.simulate') }}"><i class="fa fa-fw fa-calculator"></i> Simulate</a>
                   </li>
-                  <!-- <li> -->
-                  <!--   <a href="/sboa/navigate"><i class="fa fa-table fa-fw"></i> Navigate</a> -->
-                  <!-- </li> -->
+                  <li>
+                    <a href="{{ url_for('sboa.navigate') }}"><i class="fa fa-table fa-fw"></i> Navigate</a>
+                  </li>
                 </ul>
                 <!-- /.nav-second-level -->
               </li>
@@ -144,43 +144,43 @@
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Ingestion control<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
-                    <a href="/ingestion_control/manual-ingestion"><i class="fa fa-folder-open-o"></i> Manual ingestion</a>
+                    <a href="{{ url_for('ingestion_control.show_manual_ingestion') }}"><i class="fa fa-folder-open-o"></i> Manual ingestion</a>
                   </li>
                   <li>
-                    <a href="/ingestion_control/ingestion_control"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
+                    <a href="{{ url_for('ingestion_control.show_ingestion_control') }}"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
                   </li>
                   <li>
-                    <a href="/ingestion_control/ingestion_control?template=errors"><i class="fa fa-fw fa-exclamation-circle"></i> Ingestion errors</a>
+                    <a href="{{ url_for('ingestion_control.show_ingestion_control', template='errors') }}"><i class="fa fa-fw fa-exclamation-circle"></i> Ingestion errors</a>
                   </li>
                   <li>
-                    <a href="/ingestion_control/ingestion_control?template=alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
+                    <a href="{{ url_for('ingestion_control.show_ingestion_control', template='alerts') }}"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
                   </li>
                 </ul>
                 <!-- /.nav-second-level -->
               </li>
               <li>
-                <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
+                <a href="{{ url_for('eboa_nav.navigate') }}"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
               <li>
-                <a href="/general-view-alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> General view of alerts</a>
+                <a href="{{ url_for('general-view-alerts.show_general_view_alerts') }}"><i class="fa fa-fw fa-exclamation-triangle"></i> General view of alerts</a>
               </li>
               <li>
-                <a href="/rboa_nav"><i class="fa fa-pie-chart fa-fw"></i> Reporting navigation</a>
+                <a href="{{ url_for('rboa_nav.navigate') }}"><i class="fa fa-pie-chart fa-fw"></i> Reporting navigation</a>
               </li>
               <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Reporting control<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
-                    <a href="/rboa_nav/reporting_triggering"><i class="fa fa-fw fa-play"></i> Execute </a>
+                    <a href="{{ url_for('rboa_nav.show_execute_reports') }}"><i class="fa fa-fw fa-play"></i> Execute </a>
                   </li>
                   <li>
-                    <a href="/reporting_control/reporting_control"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
+                    <a href="{{ url_for('reporting_control.show_reporting_control') }}"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
                   </li>
                   <li>
-                    <a href="/reporting_control/reporting_control?template=errors"><i class="fa fa-fw fa-exclamation-circle"></i> Reporting errors</a>
+                    <a href="{{ url_for('reporting_control.show_reporting_control', template='errors') }}"><i class="fa fa-fw fa-exclamation-circle"></i> Reporting errors</a>
                   </li>
                   <li>
-                    <a href="/reporting_control/reporting_control?template=alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
+                    <a href="{{ url_for('reporting_control.show_reporting_control', template='alerts') }}"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
                   </li>
                 </ul>
               </li>
@@ -189,7 +189,7 @@
                 <a href="#"><i class="fa fa-globe"></i> Earth observation<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
-                    <a href="/earth-observation/navigation"><i class="fa fa-map-pin"></i> Navigation </a>
+                    <a href="{{ url_for('earth-observation.show_navigation') }}"><i class="fa fa-map-pin"></i> Navigation </a>
                   </li>
                 </ul>
               </li>
