--- a/src/vboa/templates/eboa_nav/annotations_nav.html
+++ b/src/vboa/templates/eboa_nav/annotations_nav.html
@@ -3,11 +3,11 @@
 {% block div_active_annotations %}active{% endblock %}
 {% block annotations_nav_content %}
 <div>
-  <a href="/eboa_nav/query-annotations"><p class="fa fa-chevron-left"> Back to query annotations</p></a>
+  <a href="{{ url_for('eboa_nav.query_annotations_and_render') }}"><p class="fa fa-chevron-left"> Back to query annotations</p></a>
 </div>
 
 <!-- Pagination -->
-{% with route = "/eboa_nav/query-annotations-pages", elements = annotations, filters = filters %}
+{% with route = url_for('eboa_nav.query_annotations_pages'), elements = annotations, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -39,9 +39,9 @@
           <td>{{ annotation.annotationCnf.system }}</td>
           <td>{{ annotation.ingestion_time.isoformat() }}</td>
           {% set source_uuid = annotation.source.source_uuid %}
-          <td><a href="/eboa_nav/query-source/{{ source_uuid }}">{{ annotation.source.name }}</a></td>
-          <td><a href="/eboa_nav/query-er/{{ annotation.explicitRef.explicit_ref_uuid }}">{{ annotation.explicitRef.explicit_ref }}</a></td>
-          <td><a href="/eboa_nav/query-annotation-alerts/{{ annotation.annotation_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="{{ url_for('eboa_nav.query_source', source_uuid=source_uuid) }}">{{ annotation.source.name }}</a></td>
+          <td><a href="{{ url_for('eboa_nav.query_er', explicit_ref_uuid=annotation.explicitRef.explicit_ref_uuid) }}">{{ annotation.explicitRef.explicit_ref }}</a></td>
+          <td><a href="{{ url_for('eboa_nav.query_entity_alerts_and_render', entity='annotation', entity_uuid=annotation.annotation_uuid) }}"><i class="fa fa-link"></i></a></td>
           <td>{{ annotation.annotation_uuid }}</td>
         </tr>
         {% endfor %}
