--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -3,11 +3,11 @@
 {% block div_active_events %}active{% endblock %}
 {% block events_nav_content %}
 <div>
-  <a href="/eboa_nav/query-events"><p class="fa fa-chevron-left"> Back to query events</p></a>
+  <a href="{{ url_for('eboa_nav.query_events_and_render') }}"><p class="fa fa-chevron-left"> Back to query events</p></a>
 </div>
 
 <!-- Pagination -->
-{% with route = "/eboa_nav/query-events-pages", elements = events, filters = filters %}
+{% with route = url_for('eboa_nav.query_events_pages'), elements = events, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -46,14 +46,14 @@
           <td>{{ (event.stop - event.start).total_seconds() }}</td>
           <td>{{ event.ingestion_time.isoformat() }}</td>
           {% set source_uuid = event.source.source_uuid %}
-          <td><a href="/eboa_nav/query-source/{{ source_uuid }}">{{ event.source.name }}</a></td>
+          <td><a href="{{ url_for('eboa_nav.query_source', source_uuid=source_uuid) }}">{{ event.source.name }}</a></td>
           <td>
             {% if event.explicitRef %}
-            <a href="/eboa_nav/query-er/{{ event.explicitRef.explicit_ref_uuid }}">{{ event.explicitRef.explicit_ref }}</a>
+            <a href="{{ url_for('eboa_nav.query_er', explicit_ref_uuid=event.explicitRef.explicit_ref_uuid) }}">{{ event.explicitRef.explicit_ref }}</a>
             {% endif %}
           </td>
-          <td><a href="/eboa_nav/query-event-links/{{ event.event_uuid }}"><i class="fa fa-link"></i></a></td>
-          <td><a href="/eboa_nav/query-event-alerts/{{ event.event_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="{{ url_for('eboa_nav.query_event_links_and_render', event_uuid=event.event_uuid) }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="{{ url_for('eboa_nav.query_entity_alerts_and_render', entity='event', entity_uuid=event.event_uuid) }}"><i class="fa fa-link"></i></a></td>
           <td>{{ event.event_uuid }}</td>
         </tr>
         {% endfor %}
