--- a/src/vboa/templates/eboa_nav/query_alerts_content.html
+++ b/src/vboa/templates/eboa_nav/query_alerts_content.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col-xs-3">
         <label id="{{ entity }}-alerts-names-in-checkbox">Names (<input type="checkbox" name="alert_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/{{ url_prefix }}/query-jsonify-alerts-by-name', 'name', 20, 0)" id="{{ entity }}-alerts-names-in-text"/><i class="circle"></i>
+        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('panel.index') }}{{ url_prefix }}/query-jsonify-alerts-by-name', 'name', 20, 0)" id="{{ entity }}-alerts-names-in-text"/><i class="circle"></i>
         <select name="alert_names" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="{{ entity }}-alerts-names-in-select">
         </select>
       </div>
@@ -34,7 +34,7 @@
       </div>
       <div class="col-xs-3">
         <label id="{{ entity }}-alerts-groups-in-checkbox">Groups (<input type="checkbox" name="alert_group_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/{{ url_prefix }}/query-jsonify-alerts-by-group', 'group', 20, 0)" id="{{ entity }}-alerts-groups-in-text"/><i class="circle"></i>
+        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('panel.index') }}{{ url_prefix }}/query-jsonify-alerts-by-group', 'group', 20, 0)" id="{{ entity }}-alerts-groups-in-text"/><i class="circle"></i>
         <select name="alert_groups" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="{{ entity }}-alerts-groups-in-select">
         </select>
       </div>
@@ -52,7 +52,7 @@
       </div>
       <div class="col-xs-3">
         <label id="{{ entity }}-alerts-generators-in-checkbox">Generators (<input type="checkbox" name="alert_generator_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/{{ url_prefix }}/query-jsonify-{{ entity }}-alerts-by-generator', 'generator', 20, 0)" id="{{ entity }}-alerts-generators-in-text"/><i class="circle"></i>
+        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('panel.index') }}{{ url_prefix }}/query-jsonify-{{ entity }}-alerts-by-generator', 'generator', 20, 0)" id="{{ entity }}-alerts-generators-in-text"/><i class="circle"></i>
         <select name="alert_generators" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="{{ entity }}-alerts-generators-in-select">
         </select>
       </div>
