--- a/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
+++ b/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
@@ -3,7 +3,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-xs-12">
-          <form role="form" method=post action="/eboa_nav/query-dim-signatures">
+          <form role="form" method=post action="{{ url_for('eboa_nav.query_dim_signatures_and_render') }}">
             <div class="row">
               <div class="col-xs-3">
                 <label>DIM signature</label>
@@ -16,7 +16,7 @@
               </div>
               <div class="col-xs-3">
                 <label id="dim-signatures-dim-signatures-in-checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-dim-signatures', 'dim_signature', 20, 0)" id="dim-signatures-dim-signatures-in-text"/><i class="circle"></i>
+                <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_dim_signatures') }}', 'dim_signature', 20, 0)" id="dim-signatures-dim-signatures-in-text"/><i class="circle"></i>
                 <select name="dim_signatures" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="dim-signatures-dim-signatures-in-select">
                 </select>
               </div>
