--- a/src/vboa/templates/eboa_nav/query_explicit_references_content.html
+++ b/src/vboa/templates/eboa_nav/query_explicit_references_content.html
@@ -3,7 +3,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-xs-12">
-          <form role="form" method=post action="/eboa_nav/query-ers">
+          <form role="form" method=post action="{{ url_for('eboa_nav.query_ers_and_render') }}">
             <!-- Exlicit references -->
             <div class="row">
               <div class="col-xs-3">
@@ -17,7 +17,7 @@
               </div>
               <div class="col-xs-3">
                 <label id="explicit-refs-ers-in-checkbox">Explicit references (<input type="checkbox" name="er_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-ers', 'explicit_ref', 20, 0)" id="explicit-refs-ers-in-text"/><i class="circle"></i>
+                <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_ers') }}', 'explicit_ref', 20, 0)" id="explicit-refs-ers-in-text"/><i class="circle"></i>
                 <select name="ers" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-ers-in-select">
                 </select>
               </div>
@@ -35,7 +35,7 @@
               </div>
               <div class="col-xs-3">
                 <label id="explicit-refs-groups-in-checkbox">Groups (<input type="checkbox" name="group_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-er-groups', 'name', 20, 0)" id="explicit-refs-groups-in-text"/><i class="circle"></i>
+                <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_er_groups') }}', 'name', 20, 0)" id="explicit-refs-groups-in-text"/><i class="circle"></i>
                 <select name="groups" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-groups-in-select">
                 </select>
               </div>
@@ -53,7 +53,7 @@
               </div>
               <div class="col-xs-3">
                 <label id="explicit-refs-sources-in-checkbox">Sources (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-sources', 'name', 20, 0)" id="explicit-refs-sources-in-text"/><i class="circle"></i>
+                <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_sources') }}', 'name', 20, 0)" id="explicit-refs-sources-in-text"/><i class="circle"></i>
                 <select name="sources" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-sources-in-select">
                 </select>
               </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-xs-3">
                       <label id="explicit-refs-keys-in-checkbox">Keys (<input type="checkbox" name="key_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                      <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-keys', 'event_key', 20, 0)" id="explicit-refs-keys-in-text"/><i class="circle"></i>
+                      <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_keys') }}', 'event_key', 20, 0)" id="explicit-refs-keys-in-text"/><i class="circle"></i>
                       <select name="keys" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-keys-in-select">
                       </select>
                     </div>
@@ -95,7 +95,7 @@
                       </div>
                       <div class="col-xs-3">
                         <label id="explicit-refs-gauge-names-in-checkbox">Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                        <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-gauges-by-name', 'name', 20, 0)" id="explicit-refs-gauge-names-in-text"/><i class="circle"></i>
+                        <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_gauges_by_name') }}', 'name', 20, 0)" id="explicit-refs-gauge-names-in-text"/><i class="circle"></i>
                         <select name="gauge_names" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-gauge-names-in-select">
                         </select>
                       </div>
@@ -112,7 +112,7 @@
                       </div>
                       <div class="col-xs-3">
                         <label id="explicit-refs-gauge-systems-in-checkbox">Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                        <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-gauges-by-system', 'system', 20, 0)" id="explicit-refs-gauge-systems-in-text"/><i class="circle"></i>
+                        <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_gauges_by_system') }}', 'system', 20, 0)" id="explicit-refs-gauge-systems-in-text"/><i class="circle"></i>
                         <select name="gauge_systems" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-gauge-systems-in-select">
                         </select>
                       </div>
@@ -198,7 +198,7 @@
                     </div>
                     <div class="col-xs-3">
                       <label id="explicit-refs-annotation-names-in-checkbox">Annotation names (<input type="checkbox" name="annotation_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                      <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-annotation-cnfs-by-name', 'name', 20, 0)" id="explicit-refs-annotation-names-in-text"/><i class="circle"></i>
+                      <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_annotation_cnfs_by_name') }}', 'name', 20, 0)" id="explicit-refs-annotation-names-in-text"/><i class="circle"></i>
                       <select name="annotation_names" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-annotation-names-in-select">
                       </select>
                     </div>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="col-xs-3">
                       <label id="explicit-refs-annotation-systems-in-checkbox">Annotation systems (<input type="checkbox" name="annotation_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                      <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-annotation-cnfs-by-system', 'system', 20, 0)" id="explicit-refs-annotation-systems-in-text"/><i class="circle"></i>
+                      <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '{{ url_for('eboa_nav.query_jsonify_annotation_cnfs_by_system') }}', 'system', 20, 0)" id="explicit-refs-annotation-systems-in-text"/><i class="circle"></i>
                       <select name="annotation_systems" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="explicit-refs-annotation-systems-in-select">
                       </select>
                     </div>
