--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -3,11 +3,11 @@
 {% block div_active_sources %}active{% endblock %}
 {% block sources_nav_content %}
 <div>
-  <a href="/eboa_nav/query-sources"><p class="fa fa-chevron-left"> Back to query sources</p></a>
+  <a href="{{ url_for('eboa_nav.query_sources_and_render') }}"><p class="fa fa-chevron-left"> Back to query sources</p></a>
 </div>
 
 <!-- Pagination -->
-{% with route = "/eboa_nav/query-sources-pages", elements = sources, filters = filters %}
+{% with route = url_for('eboa_nav.query_sources_pages'), elements = sources, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -44,9 +44,9 @@
           <tr id="{{ source.source_uuid }}">
             <td></td>
             <td><i id="expand-source-not-ingested-sources-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-not-ingested-sources-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td><a href="/eboa_nav/download-source/{{ source.name }}">{{ source.name }}</a></td>
-            <td><a href="/eboa_nav/query-events-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
-            <td><a href="/eboa_nav/query-annotations-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
+            <td><a href="{{ url_for('eboa_nav.download_source', source_name=source.name) }}">{{ source.name }}</a></td>
+            <td><a href="{{ url_for('eboa_nav.query_events_by_source_uuid', source_uuid=source.source_uuid) }}"><i class="fa fa-link"></i></a></td>
+            <td><a href="{{ url_for('eboa_nav.query_annotations_by_source_uuid', source_uuid=source.source_uuid) }}"><i class="fa fa-link"></i></a></td>
             {% if source.validity_start %}
             <td>{{ source.validity_start.isoformat() }}</td>
             {% else %}
@@ -66,7 +66,7 @@
             <td>{{ source.dimSignature.dim_signature }}</td>
             <td>{{ source.processor }}</td>
             <td>{{ source.processor_version }}</td>
-            <td><a href="/eboa_nav/query-source-alerts/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
+            <td><a href="{{ url_for('eboa_nav.query_entity_alerts_and_render', entity='source', entity_uuid=source.source_uuid) }}"><i class="fa fa-link"></i></a></td>
             <td>{{ source.source_uuid }}</td>
           </tr>
           {% endfor %}
@@ -145,9 +145,9 @@
           <tr id="{{ source.source_uuid }}">
             <td></td>
             <td><i id="expand-source-ingestion-success-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td><a href="/eboa_nav/download-source/{{ source.name }}">{{ source.name }}</a></td>
-            <td><a href="/eboa_nav/query-events-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
-            <td><a href="/eboa_nav/query-annotations-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
+            <td><a href="{{ url_for('eboa_nav.download_source', source_name=source.name) }}">{{ source.name }}</a></td>
+            <td><a href="{{ url_for('eboa_nav.query_events_by_source_uuid', source_uuid=source.source_uuid) }}"><i class="fa fa-link"></i></a></td>
+            <td><a href="{{ url_for('eboa_nav.query_annotations_by_source_uuid', source_uuid=source.source_uuid) }}"><i class="fa fa-link"></i></a></td>
             <td>{{ source.validity_start.isoformat() }}</td>
             <td>{{ source.validity_stop.isoformat() }}</td>
             <td>{{ (source.validity_stop - source.validity_start).total_seconds() }}</td>
@@ -170,7 +170,7 @@
             <td>{{ source.dimSignature.dim_signature }}</td>
             <td>{{ source.processor }}</td>
             <td>{{ source.processor_version }}</td>
-            <td><a href="/eboa_nav/query-source-alerts/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
+            <td><a href="{{ url_for('eboa_nav.query_entity_alerts_and_render', entity='source', entity_uuid=source.source_uuid) }}"><i class="fa fa-link"></i></a></td>
             <td>{{ source.source_uuid }}</td>
           </tr>
           {% endfor %}
