--- a/src/vboa/templates/general_view_alerts/general_view_alerts_query.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_query.html
@@ -13,7 +13,7 @@
         </ul>
         <div class="tab-content">
           <div class="tab-pane active" id="general-view-alerts-query-window">          
-            <form role="form" method=post action="/general-view-alerts/">
+            <form role="form" method=post action="{{ url_for('general-view-alerts.show_general_view_alerts') }}">
               <div>
                 <!-- Default values message -->
                 <div class="row">
@@ -43,7 +43,7 @@
             </form>
           </div>
           <div class="tab-pane" id="general-view-alerts-sliding-window">          
-            <form role="form" method=post action="/general-view-alerts/sliding-general-view-alerts">
+            <form role="form" method=post action="{{ url_for('general-view-alerts.show_sliding_general_view_alerts') }}">
               <div>
                 <!-- Default values message -->
                 <div class="row">
