--- a/src/vboa/templates/general_view_alerts/general_view_alerts_sources_table_content_json_data.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_sources_table_content_json_data.html
@@ -50,8 +50,8 @@
     <td>{{ alert["generator"] }}</td>
     <td><span class="{{ notified_class }}">{{ alert["notified"] }}</span></td>
     <td>{{ alert["ingestion_time"] }}</td>
-    <td><a href="/eboa_nav/query-source-alert/{{ alert['source_alert_uuid'] }}">{{ alert["source_alert_uuid"] }}</a></td>
-    <td><a href="/eboa_nav/query-source-links/{{ alert['source_uuid'] }}">{{ alert["source_uuid"] }}</a></td>
+    <td><a href="{{ url_for('eboa_nav.query_entity_alert_and_render', entity='source', alert_uuid=alert.source_alert_uuid) }}">{{ alert.source_alert_uuid }}</a></td>
+    <td><a href="{{ url_for('eboa_nav.query_source', source_uuid=alert.source_uuid) }}">{{ alert.source_uuid }}</a></td>
   </tr>
   {% endfor %}
 </tbody>
