--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_and_errors.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_and_errors.html
@@ -11,7 +11,7 @@
 {% set alerts = sources|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
 
 <!-- Pagination -->
-{% with route = "/ingestion_control/ingestion-control-pages", elements = sources, filters = filters %}
+{% with route = url_for('ingestion_control.query_ingestion_control_pages'), elements = sources, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -33,7 +33,7 @@
   "template": "alerts_and_errors",
   }
   var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
-  vboa.update_view(parameters, repeat_cycle, "/ingestion_control/sliding_ingestion_control_parameters");
+  vboa.update_view(parameters, repeat_cycle, "{{ url_for('ingestion_control.show_sliding_ingestion_control_parameters') }}");
   {% endif %}
 </script>
 {% endblock %}
