--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
@@ -42,7 +42,7 @@
               <td class="{{ severity_label }}-severity">{{ severity_label }}</td>
               <td>{{ alert.alertDefinition.group.name }}</td>
               <td>{{ alert.alertDefinition.name }}</td>
-              <td><a href="/eboa_nav/query-sources-by-name/{{ alert.source.name }}">{{ alert.source.name }}</a></td>
+              <td><a href="{{ url_for('eboa_nav.query_sources_by_name', name=alert.source.name) }}">{{ alert.source.name }}</a></td>
               <td>{{ alert.message }}</td>
               <td>{{ alert.validated }}</td>
               <td>{{ alert.generator }}</td>
