--- a/src/vboa/templates/ingestion_control/ingestion_control_errors.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_errors.html
@@ -10,7 +10,7 @@
 {% set ingestion_errors = sources|selectattr("ingestion_error", "equalto", True)|list %}
 
 <!-- Pagination -->
-{% with route = "/ingestion_control/ingestion-control-pages", elements = ingestion_errors, filters = filters %}
+{% with route = url_for('ingestion_control.query_ingestion_control_pages'), elements = ingestion_errors, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -30,7 +30,7 @@
   "template": "errors",
   }
   var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
-  vboa.update_view(parameters, repeat_cycle, "/ingestion_control/sliding_ingestion_control_parameters");
+  vboa.update_view(parameters, repeat_cycle, "{{ url_for('ingestion_control.show_sliding_ingestion_control_parameters') }}");
   {% endif %}
 </script>
 {% endblock %}
