--- a/src/vboa/templates/ingestion_control/ingestion_table_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_table_content.html
@@ -27,7 +27,7 @@
   <tr id="{{ source.source_uuid }}">
     <td></td>
     <td><i id="expand-source-ingestion-error-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-error-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-    <td><a href="/eboa_nav/query-sources-by-name/{{ source.name }}">{{ source.name }}</a></td>
+    <td><a href="{{ url_for('eboa_nav.query_sources_by_name', name=source.name) }}">{{ source.name }}</a></td>
     <td>{{ source.dimSignature.dim_signature }}</td>
     {% with progress = source.get_ingestion_progress(), error = source.ingestion_error %}
     {% include "vboa/progress_bar.html" %}
