--- a/src/vboa/templates/rboa_nav/reports_nav.html
+++ b/src/vboa/templates/rboa_nav/reports_nav.html
@@ -3,10 +3,10 @@
 {% block div_active_reports %}active{% endblock %}
 {% block reports_nav_content %}
 <div>
-  <a href="/rboa_nav/query-reports"><p class="fa fa-chevron-left"> Back to query reports</p></a>
+  <a href="{{ url_for('rboa_nav.query_reports_and_render') }}"><p class="fa fa-chevron-left"> Back to query reports</p></a>
 </div>
 <!-- Pagination -->
-{% with route = "/rboa_nav/query-reports-pages", elements = reports, filters = filters %}
+{% with route = url_for('rboa_nav.query_reports_pages'), elements = reports, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -43,7 +43,7 @@
         {% for report in not_generated_reports %}
         <tr>
           <td><i id="expand-report-statuses-{{ report.report_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_report_statuses('expand-report-statuses-{{ report.report_uuid }}', '{{ report.report_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-          <td><a href="/rboa_nav/query-report/{{ report.report_uuid }}">{{ report.name }}</a></td>
+          <td><a href="{{ url_for('rboa_nav.query_report', report_uuid=report.report_uuid) }}">{{ report.name }}</a></td>
           <td>{{ report.generation_mode }}</td>
           <td>{{ report.validity_start.isoformat() }}</td>
           <td>{{ report.validity_stop.isoformat() }}</td>
@@ -62,7 +62,7 @@
           <td>{{ report.reportGroup.name }}</td>
           <td>{{ report.generator }}</td>
           <td>{{ report.generator_version }}</td>
-          <td><a href="/eboa_nav/query-report-alerts/{{ report.report_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="{{ url_for('rboa_nav.query_report_alerts_and_render', report_uuid=report.report_uuid) }}"><i class="fa fa-link"></i></a></td>
           <td>{{ report.report_uuid }}</td>
           <td>
             {% with report = report %}
@@ -128,7 +128,7 @@
         {% for report in successfully_generated_reports %}
         <tr>
           <td><i id="expand-report-statuses-{{ report.report_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_report_statuses('expand-report-statuses-{{ report.report_uuid }}', '{{ report.report_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-          <td><a href="/rboa_nav/query-report/{{ report.report_uuid }}">{{ report.name }}</a></td>
+          <td><a href="{{ url_for('rboa_nav.query_report', report_uuid=report.report_uuid) }}">{{ report.name }}</a></td>
           <td>{{ report.generation_mode }}</td>
           <td>{{ report.validity_start.isoformat() }}</td>
           <td>{{ report.validity_stop.isoformat() }}</td>
@@ -147,7 +147,7 @@
           <td>{{ report.reportGroup.name }}</td>
           <td>{{ report.generator }}</td>
           <td>{{ report.generator_version }}</td>
-          <td><a href="/eboa_nav/query-report-alerts/{{ report.report_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="{{ url_for('rboa_nav.query_report_alerts_and_render', report_uuid=report.report_uuid) }}"><i class="fa fa-link"></i></a></td>
           <td>{{ report.report_uuid }}</td>
           <td>
             {% with report = report %}
