--- a/src/vboa/templates/reporting_control/reporting_control_alerts_and_errors.html
+++ b/src/vboa/templates/reporting_control/reporting_control_alerts_and_errors.html
@@ -11,7 +11,7 @@
 {% set alerts = reports|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
 
 <!-- Pagination -->
-{% with route = "/reporting_control/reporting-control-pages", elements = reports, filters = filters %}
+{% with route = url_for('reporting_control.query_reporting_control_pages'), elements = reports, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -33,7 +33,7 @@
   "template": "alerts",
   }
   var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
-  vboa.update_view(parameters, repeat_cycle, "/reporting_control/sliding_reporting_control_parameters");
+  vboa.update_view(parameters, repeat_cycle, "{{ url_for('reporting_control.show_sliding_reporting_control_parameters') }}");
   {% endif %}
 </script>
 {% endblock %}
