--- a/src/vboa/templates/reporting_control/reporting_control_errors_content.html
+++ b/src/vboa/templates/reporting_control/reporting_control_errors_content.html
@@ -38,7 +38,7 @@
           {% for report in reporting_errors %}
           <tr>
             <td><i id="expand-report-reporting-error-statuses-{{ report.report_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_report_statuses('expand-report-reporting-error-statuses-{{ report.report_uuid }}', '{{ report.report_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td><a href="/eboa_nav/query-report/{{ report.report_uuid }}">{{ report.name }}</a></td>
+            <td><a href="{{ url_for('rboa_nav.query_report', report_uuid=report.report_uuid) }}">{{ report.name }}</a></td>
             <td>{{ report.reportGroup.name }}</td>
             <td>{{ report.generation_mode }}</td>
             {% with progress = report.get_generation_progress(), error = True %}
